[gd_scene load_steps=3 format=3 uid="uid://br6o2asvb3hxs"]

[ext_resource type="Script" path="res://scene/cards/card_ui.gd" id="1_6ijqm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oyew"]
size = Vector2(114, 145)

[node name="CardUi" type="Control"]
custom_minimum_size = Vector2(114, 146)
layout_mode = 3
anchors_preset = 0
offset_right = 114.0
offset_bottom = 146.0
pivot_offset = Vector2(60, 70)
script = ExtResource("1_6ijqm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CostContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(25, 0)
layout_mode = 0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2

[node name="CostTexture" type="TextureRect" parent="CostContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
mouse_filter = 2

[node name="CostLabel" type="Label" parent="CostContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(57, 72.5)
shape = SubResource("RectangleShape2D_6oyew")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
